--- a/10-findable.bib
+++ b/10-findable.bib
@@ -130,7 +130,7 @@
 @article{Wilkinson2016,
  title = {The FAIR Guiding Principles for scientific data management and stewardship},
  author = {Mark D. Wilkinson},
- journal = {Nature: Scientific Data},
+ journal = {Scientific Data},
  volume = {3},
  pages = {160018},
  year = {2016}
